--- a/categoriasComponent/usuarios.css
+++ b/categoriasComponent/usuarios.css
@@ -23,10 +23,13 @@ body {
     background-color: var(--color-bg-primary-dark);
 }
 .usuario{
+    display: inline-block;
     width: 100%;
-    padding:2rem 0rem;
+    /* height: 38.5rem; */
+    height: 100%;
+    padding: 1rem;
     position: relative;
-    overflow-y: scroll;
+    overflow-x: scroll;
 }
 ::-webkit-scrollbar-thumb {
     background: #ccc;
@@ -50,18 +53,17 @@ body {
 }
 
 .usuario__container{
-    display: flexbox;
-    width: 100%;
-    margin: 2rem 0rem;
-    justify-content: center;
-    /* padding-bottom: 1rem; */
+    margin: 1rem 0rem;
+    padding-bottom: 1rem;
+    white-space: nowrap;
+    /* overflow-wrap: break-word; */
+    /* word-wrap: break-word; */
 }
 .usuario-item{
-    display: inline-block;
     width: 25.2rem;
-    height: max-content;
+    /* height: 32rem; */
     margin-right: 3rem;
-    margin-bottom: 4rem;
+    display: inline-block;
     transition: 450ms all;
     transform-origin: center left;
     position: relative;
@@ -76,13 +78,14 @@ body {
 }
 
 .item{
+    margin-top: 3rem;
+    width: 25.2rem;
+    height: auto;
+    /* height: 28.8rem; */
     display: flex;
     justify-content:flex-end;
     flex-direction:column;
-    margin-top: 3rem;
-    width: 25.2rem;
-    /* height: 28.8rem; */
-    /* height: ; */
+    /* word-wrap: break-word; */
 }
 .imagen{
     background-color: transparent;
@@ -91,47 +94,77 @@ body {
     height: 10rem;
     position: absolute;
     /* margin-bottom: 20rem; */
-    top: -2rem;
+    /* margin-bottom: 1rem; */
+    top: -1.5rem;
     
 }
 .imagen img{
     border-radius: 50%;
 }
 .info{
-    
-    width: 100%;
-    /* height: 23.8rem; */
-    height: max-content;
+    padding: 0 2rem;
+    width: 25.2rem;
+    /* height: 25.2rem; */
     background-color: var(--color-bg-card-info);
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
 }
 
 .name{
+    display: inline-block;
     text-align: center;
+    justify-content: center;
+    overflow-wrap: break-word;
+    width: 100%;
 }
 .name > h1{
     font-weight: 400;
     justify-content:center;
-    padding:0rem 2rem 0rem 2rem;
+    align-items: center;
+    padding:0px;
     margin-top: 6.9rem;
     font-size: 2rem;
-    color: var(--color-text);
     white-space: normal !important;
-    word-break: break-all;
+    word-wrap: break-word;
+    color: var(--color-text);
 }
 .name > h2{
     font-weight: 400;
     justify-content: center;
-    padding:0rem 2rem 0rem 2rem;
+    padding:0px;
     font-size: 1.5rem;
     color: var(--color-subtext);
+
+}
+.compania{
+    width: 21.2rem;
+    /* word-wrap: break-word; */
+    /* text-align: center; */
+    /* margin-left: 2rem; */
+}
+.compania > h1{
+    font-weight: 400;
+    justify-content:center;
+    padding:0px;
+    /* margin-top: 6.9rem; */
+    font-size: 2rem;
+    /* Si tienes el white-space en nowrap tienes que cambiar a normal, la caja que vas a asignar el word-wrap: break-word;*/
     white-space: normal !important;
-    word-break: break-all;
+    word-wrap: break-word;
+    color: var(--color-text);
+    
+}
+.compania > h2{
+    margin-top: 1rem;
+    font-weight: 400;
+    justify-content: center;
+    padding:0px;
+    font-size: 1.5rem;
+    color: var(--color-subtext);
 
 }
 .box{
-    margin-top: 2rem;
+    margin-top: .5rem;
     display: flex;
     justify-content: space-around;
 }
@@ -161,11 +194,10 @@ body {
     font-weight: 400;
     font-size: 1.5rem;
     color: var(--color-text);
-    white-space: normal !important;
-    word-break: break-all;
 }
 .icons{
-    margin: 2rem 0rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     display: flex;
     justify-content: center;
 }
